Fix: Sharemycart logo was not visible, so, fixed it.

--- a/src/ui/src/components/auth/Login.scss
+++ b/src/ui/src/components/auth/Login.scss
@@ -12,8 +12,7 @@
 	.image-login {
 		width: fit-content;
 		margin: auto;
-		margin-top: -20px;
-		max-width: 300px;
+		max-width: 100px;
 	}
 
 	.logo-text {
